--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -55,8 +55,8 @@
   "degree": "درجات",
 
 
-  "uploadGallary": "ارفع الصوره من المعرض", 
-  "uploadCamera": "ارفع الصوره عن طريق الكاميرا", 
+  "uploadGallary": "اختر الصوره من المعرض", 
+  "uploadCamera": "اختر الصوره عن طريق الكاميرا", 
   "selectPhoto": "من فضلك اختار صوره", 
   "randomAnswer1": "ازرع أصنافًا مقاومة للأمراض. إذا كان الفطر منتشرًا، قم بإزالة الأوراق المصابة أو النباتات بأكملها. تجنب الري العلوي وري النباتات في المساء. قم بتناوب المحاصيل الصالحة للأكل كل عام وتجنب تكديس النباتات.", 
   "randomAnswer2": "لا توجد وسيلة فعالة للسيطرة على العدوى الفيروسية، ولكن هناك بعض الأصناف المقاومة. قم بإزالة النباتات المصابة على الفور لمنع انتشار المرض. يمكن لفيروس الفسيفساء البقاء على قيد الحياة في التربة لبعض الوقت.", 
@@ -99,6 +99,11 @@
   "msgSendCode": "تم ارسال الكود بنجاح",
   "msgSendCodeWrong": "لقد حدث خطأ ما، قم بكتابة الكود مرة أخرى!",
   "verificationPassword": "التحقق من كلمة المرور",
-  "msgVerificationPassword": "لقد أرسلنا لك رمزًا إلى بريدك الإلكتروني"
+  "msgVerificationPassword": "لقد أرسلنا لك رمزًا إلى بريدك الإلكتروني", 
+
+
+
+  "myName": "وائل سعد"
+
   
 }
