appDone Unless shalaby told me there is new

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -37,6 +37,7 @@
   "gasSensor": "مستشعر الغاز",
   "soilMoisture": "رطوبة التربة",
   "humidity": "مستشعر الرطوبة",
+  "ldr": "مستشعر الضوء",
   "temperature": "مستشعر الحرارة",
   "topHome": "اهلاً وائل ،",
   "topHomeN": "ما هو المستشعر الذي تريده اليوم ؟",
